--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "url": "https://github.com/elmuerte/shumway-shim/issues"
   },
   "homepage": "https://github.com/elmuerte/shumway-shim#readme",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "copy-webpack-plugin": "^4.6.0",
     "eslint": "^5.11.1",
@@ -31,6 +30,7 @@
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "serve": "^10.1.1"
+    "serve": "^10.1.1",
+    "js-yaml": ">=3.13.1"
   }
 }
